k8s/prod/patch-deployment-certificates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: blog
          volumeMounts:
            - name: certs-vol
              mountPath: "/certs"
              readOnly: true
      volumes:
        - name: certs-vol
          secret:
            secretName: wtrhs-com-tls
